# vinzy_automl

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
vinzy_automl/: automl.py
